feat: new endpoint check habilitation by questioningId (#188)